Adds plugin and details to upload to bin tray

--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,9 @@ allprojects {
     repositories {
         jcenter()
     }
+    buildscript {
+        repositories {
+            jcenter()
+        }
+    }
 }
